# ACC-DP

./: .env.example  .gitattributes  .gitignore  ACC_MAP_RAW.md  Github.md  README.md  go.work  go.work.sum  run-producer.bat
app/: go.mod  go.sum  main.go  producer.go  user.go
backend/: Dockerfile  README.md  go.mod
backend/cmd/server/: main.go
backend/internal/adapter/http/: auth_handler.go  router.go  swagger.go
backend/internal/config/: config.go
backend/internal/database/: migrate.go  postgres.go
backend/internal/domain/: errors.go  models.go
backend/internal/repository/: auth_repository.go
consumer/: go.mod  pyproject.toml  requirements.txt
consumer/src/: logging_setup.py  main.py
consumer/src/avro/: __init__.py  envelope.py
consumer/src/config/: __init__.py  settings.py
consumer/src/consumer/: __init__.py
consumer/src/filewriter/: __init__.py  schema.py
consumer/src/sink/: __init__.py
consumer/src/wal/: __init__.py
consumer/src/window/: __init__.py
infra/: docker-compose.yml
internal/models/: enums.go  graphic.go  physics.go  static.go  types.go
internal/shared_memory/: constants.go
producer/: Dockerfile.backend  go.mod  go.sum
producer/cmd/backend/: main.go
producer/cmd/producer/: main.go
producer/cmd/reader/: main.go
producer/internal/batch/: adapter.go  batcher.go
producer/internal/config/: config.go
producer/internal/metrics/: metrics.go
producer/internal/worker/: retry.go
producer/pipeline/: pipeline.go
user/: client.go  go.mod  model.go  store.go  store_test.go  watcher.go
(+22 files in other folders)
