[project]
name = "acc-dp-consumer"
version = "0.1.0"
description = "ACC Data Platform - Redpanda consumer with MinIO sink"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[schema-registry]>=2.3.0",
    "minio>=7.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
consumer = "src.main:main"
